--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.cache.redis.key-prefix=CACHE_
 spring.cache.redis.use-key-prefix=true
 #??????
 spring.cache.redis.cache-null-values=true
+
+#?????
+gulimall.thread.coreSize=20
+gulimall.thread.maxSize=200
+gulimall.thread.keepAliveTime=10
