--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -32,6 +32,11 @@
             <version>4.4.12</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
