--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.cache.redis.key-prefix=CACHE_
 spring.cache.redis.use-key-prefix=true
 #??????
 spring.cache.redis.cache-null-values=true
+spring.session.store-type=redis
+server.servlet.session.timeout=30m
 
 #?????
 gulimall.thread.coreSize=20
