--- a/gulimall-cart/src/main/resources/application.properties
+++ b/gulimall-cart/src/main/resources/application.properties
@@ -1,10 +1,8 @@
+spring.application.name=gulimall-cart
+server.port=30000
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-spring.application.name=gulimall-search
-server.port=12000
 
-spring.thymeleaf.cache=false
+spring.redis.host=192.168.3.100
 
 spring.session.store-type=redis
 server.servlet.session.timeout=30m
-
-spring.redis.host=192.168.3.100
