--- a/gulimall-order/src/main/resources/application.yml
+++ b/gulimall-order/src/main/resources/application.yml
@@ -4,11 +4,25 @@ spring:
     password: root
     url: jdbc:mysql://192.168.3.100:3306/gulimall_oms
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 192.168.3.100
+  thymeleaf:
+    cache: false
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto #主键ID自增
 
+
+
+
 server:
   port: 9000
+logging:
+  level:
+    com.atguigu.gulimall: debug
