--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.rabbitmq.host=192.168.3.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
 
+
+spring.rabbitmq.publisher-confirms=true
+
+spring.rabbitmq.publisher-returns=true
+
+spring.rabbitmq.template.mandatory=true
+
+
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+spring.session.store-type=redis
+server.servlet.session.timeout=30m
+
+gulimall.thread.coreSize=20
+gulimall.thread.maxSize=200
+gulimall.thread.keepAliveTime=10
