--- a/gulimall-ware/src/main/resources/application.properties
+++ b/gulimall-ware/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.rabbitmq.host=192.168.3.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
 
+
+spring.rabbitmq.publisher-confirms=true
+
+spring.rabbitmq.publisher-returns=true
+
+spring.rabbitmq.template.mandatory=true
+
+
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
